--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
         <!-- Example include-html DIV -->
     <div w3-include-html="welcome.html"></div>
 
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <div w3-include-html="portfolio.html"></div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div w3-include-html="contact.html"></div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <div w3-include-html="about.html"></div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
