--- a/welcome.html
+++ b/welcome.html
@@ -2,5 +2,6 @@
 	<img id="welcomemainImg" class="center" src="images/kia_rabbit_hole.gif"></img>
 </div>
 <div id="welcomemainImgdesc" class="container">	
-	<strong>Are you ready to tumble down the rabbit hole?</strong>
+	<!-- <strong>Are you ready to tumble down the rabbit hole?</strong> -->
+	<strong>Follow the rabbit!</strong>
 </div>
