--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,8 @@
 <div id="welcomemain" class="container">
-	<img id="welcomemainImg" class="center" src="images/kia_rabbit_hole.gif"></img>
+	<a href="#"><img id="welcomemainImg" class="center" src="images/kia_rabbit_hole.gif"
+	onmouseover="this.src='images/morphius.jpg'"
+	onmouseout="this.src='images/kia_rabbit_hole.gif'" border="0">
+			</a>
 </div>
 <div id="welcomemainImgdesc" class="container">	
 	<!-- <strong>Are you ready to tumble down the rabbit hole?</strong> -->
