--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div id="portfolioContainer">
 	<h1>Portfolio</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
