--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	
@@ -34,6 +35,14 @@
     <!-- Contact Section -->
     <section id="contact">
         <div w3-include-html="contact.html"></div>
+    </section>
+
+    <!-- Footer Section -->
+    <section id="bodyFooter">
+        <div id="footerContainer">
+            <a id="facebook" href="https://github.com/inewham"><i class="fa fa-github"></i></a>
+            <footer> &copy; 2016<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, Saiyan Solutions.</footer>
+        </div>
     </section>
 
     <!-- Optional JavaScript -->
