added portfolio content and footer links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	
@@ -40,8 +40,10 @@
     <!-- Footer Section -->
     <section id="bodyFooter">
         <div id="footerContainer">
-            <a id="facebook" href="https://github.com/inewham"><i class="fa fa-github"></i></a>
-            <footer> &copy; 2016<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, Saiyan Solutions.</footer>
+            <a id="github" href="https://github.com/inewham" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a id="facebook" href="https://www.facebook.com/israel.newham" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a id="linkedin" href="https://uk.linkedin.com/in/israel-newham-302006100" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <footer>Saiyan Solutions, &copy; 2016<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>. All Rights Reserved.</footer>
         </div>
     </section>
 
@@ -50,7 +52,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+     <script type="text/javascript" src="scripts/script.js"></script>
     <script>includeHTML();</script>
 	</body>
 </html>
