--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,8 @@
 <div id="portfolioContainer">
+<div class="center">
 	<h1>Portfolio</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<a href="https://codepen.io/inewham/full/aYGVrG/" target="_blank"><img id="einstein" src="images/freeCodeCampTribute.png" alt="website thumbnail"></a>
+	<a href="https://inewham.github.io/GalleryChallenge/" target="_blank"><img id="gallery" src="images/gallerychallenge.png" alt="website thumbnail"></a>
+	<a href="https://pes-dev.saiyansolutions.com/" target="_blank"><img id="pes" src="images/pes.png" alt="website thumbnail"></a>
+</div>
 </div>
