amended about section

--- a/about.html
+++ b/about.html
@@ -1,10 +1,6 @@
 <div id="aboutContainer">
 	<h1>About</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<hr>
+	<p>Co-founder of Saiyan Solutions, a technology solutions provider. I am a life long student of a number of technologies. Starting a career in IT in 2001, with over 17 years of support experience; the time has come to become creative with a medium of my field.<br>
+	Embarking on the FreeCodeCamp web developers course to learn the required skills, in an easy to learn and structured way.<br>
+	With a focus on front-end development and UX/UI design, the time has come to see how far the rabbit whole goes!</p>
 </div>
