--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,29 @@
 <div id="contactContainer">
-	<h1>Contact</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h1>Contact Me</h1>
+
+<form>
+	<div class="form-group">
+  		<div class="row">
+    		<div class="col">
+      			<input type="text" class="form-control" placeholder="First name">
+    		</div>
+    		<div class="col">
+      			<input type="text" class="form-control" placeholder="Last name">
+    		</div>
+		</div>
+    	<label for="exampleInputEmail1">Email address</label>
+    	<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    	<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+	</div>
+	<div class="form-group">
+		<label for="exampleInputPassword1">Password</label>
+    	<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+	</div>
+	<div class="form-group">
+    	<label for="exampleFormControlTextarea1">Message:</label>
+    	<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  	</div>
+  	<button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
 </div>
