--- a/index.html
+++ b/index.html
@@ -1,58 +1,239 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-	
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
+      integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+
     <title>Portfolio</title>
   </head>
   <body>
-    	
-	<!-- Example include-html DIV -->
-	<div w3-include-html="navigation.html"></div>
+    <!-- Navigation Bar -->
+    <nav class="navbar fixed-top">
+      <a class="navbar-brand" href="#">
+        <img
+          id="navImg"
+          src="images/ki_bg_eeeeee.gif"
+          class="d-inline-block align-top"
+          alt="Saiyan Solutions logo"
+        />
+        Saiyan Solutions
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        &#9776;
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#portfolio"
+              >Portfolio <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-        <!-- Example include-html DIV -->
-    <div w3-include-html="welcome.html"></div>
+    <!-- Welcome Section -->
+    <div id="welcomemain" class="container">
+      <a href="#"
+        ><img
+          id="welcomemainImg"
+          class="center"
+          src="images/kia_rabbit_hole.gif"
+          onmouseover="this.src='images/morphius.jpg'"
+          onmouseout="this.src='images/kia_rabbit_hole.gif'"
+          border="0"
+        />
+      </a>
+    </div>
+    <div id="welcomemainImgdesc" class="container">
+      <!-- <strong>Are you ready to tumble down the rabbit hole?</strong> -->
+      <strong>Follow the rabbit!</strong>
+    </div>
 
     <!-- Portfolio Section -->
     <section id="portfolio">
-        <div w3-include-html="portfolio.html"></div>
+      <div id="portfolioContainer">
+        <div class="center">
+          <h1>Portfolio</h1>
+          <a href="https://codepen.io/inewham/full/aYGVrG/" target="_blank"
+            ><img
+              id="einstein"
+              src="images/freeCodeCampTribute.png"
+              alt="website thumbnail"
+          /></a>
+          <a href="https://inewham.github.io/GalleryChallenge/" target="_blank"
+            ><img
+              id="gallery"
+              src="images/gallerychallenge.png"
+              alt="website thumbnail"
+          /></a>
+          <a href="https://pes-dev.saiyansolutions.com/" target="_blank"
+            ><img id="pes" src="images/pes.png" alt="website thumbnail"
+          /></a>
+        </div>
+      </div>
     </section>
 
     <!-- About Section -->
     <section id="about">
-        <div w3-include-html="about.html"></div>
+      <div id="aboutContainer">
+        <h1>About</h1>
+        <p>
+          Co-founder of Saiyan Solutions, a technology solutions provider. I am
+          a life long student of a number of technologies. Starting a career in
+          IT in 2001, with over 17 years of support experience; the time has
+          come to become creative with a medium of my field.<br />
+          Embarking on the FreeCodeCamp web developers course to learn the
+          required skills, in an easy to learn and structured way.<br />
+          With a focus on front-end development and UX/UI design, the time has
+          come to see how far the rabbit hole goes!
+        </p>
+      </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-        <div w3-include-html="contact.html"></div>
+      <div id="contactContainer">
+        <h1>Contact Me</h1>
+
+        <form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="First name"
+                />
+              </div>
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Last name"
+                />
+              </div>
+            </div>
+            <label for="exampleInputEmail1">Email address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Enter email"
+            />
+            <small id="emailHelp" class="form-text text-muted"
+              >We'll never share your email with anyone else.</small
+            >
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              placeholder="Password"
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message:</label>
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
     </section>
 
     <!-- Footer Section -->
     <section id="bodyFooter">
-        <div id="footerContainer">
-            <a id="github" href="https://github.com/inewham" target="_blank"><i class="fab fa-github-square"></i></a>
-            <a id="facebook" href="https://www.facebook.com/israel.newham" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            <a id="linkedin" href="https://uk.linkedin.com/in/israel-newham-302006100" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <footer>Saiyan Solutions, &copy; 2016<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>. All Rights Reserved.</footer>
-        </div>
+      <div id="footerContainer">
+        <a id="github" href="https://github.com/inewham" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+        <a
+          id="facebook"
+          href="https://www.facebook.com/israel.newham"
+          target="_blank"
+          ><i class="fab fa-facebook-square"></i
+        ></a>
+        <a
+          id="linkedin"
+          href="https://uk.linkedin.com/in/israel-newham-302006100"
+          target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <footer>
+          Saiyan Solutions, &copy; 2016<script>
+            new Date().getFullYear() > 2010 &&
+              document.write("-" + new Date().getFullYear());</script
+          >. All Rights Reserved.
+        </footer>
+      </div>
     </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-     <script type="text/javascript" src="scripts/script.js"></script>
-    <script>includeHTML();</script>
-	</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
+  </body>
 </html>
