Amended welcome section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top">
-      <a class="navbar-brand" href="#">
+      <a id="navbarLogo" class="navbar-brand" href="#">
         <img
           id="navImg"
           src="images/ki_bg_eeeeee.gif"
@@ -73,12 +73,12 @@
 
     <!-- Welcome Section -->
     <div id="welcomemain" class="container">
-      <a href="#"
+      <a id="morphius" href="#"
         ><img
           id="welcomemainImg"
           class="center"
           src="images/kia_rabbit_hole.gif"
-          onmouseover="this.src='images/morphius.jpg'"
+          onmouseover="this.src='images/morphius.gif'"
           onmouseout="this.src='images/kia_rabbit_hole.gif'"
           border="0"
         />
@@ -232,8 +232,5 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="scripts/script.js"></script>
-    <script>
-      includeHTML();
-    </script>
   </body>
 </html>
